Fix data sources for 'Demo gene.iobio' to point to exome trio data sets, not wgs. Fix word wrap for tooltip title so that long sequence for alt or allele wraps as expected.

--- a/assets/css/sass/_tooltip.sass
+++ b/assets/css/sass/_tooltip.sass
@@ -1,6 +1,6 @@
 .tooltip-title
   font-size: 11px
-  word-break: break-all
+  word-break: break-word
 
 .tooltip-header
   overflow-wrap: break-all
