--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1351,7 +1351,7 @@ header {
 
 .tooltip-title {
   font-size: 11px;
-  word-break: break-all; }
+  word-break: break-word; }
 
 .tooltip-header {
   overflow-wrap: break-all;
